# bevy_xcap

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
examples/: ci_capture.rs  screenshot.rs
src/: lib.rs
